# slapdash

./: .env  .gitignore  .prettierrc  README.md  biome.jsonc  database.db  drizzle.config.ts  main.py  package-lock.json  package.json  pyproject.toml
app/: auth.py  database.py  main.py
app/controllers/: auth_routes.py  chat_routes.py  todo_routes.py
app/models/: chat.py  sql_models.py  todo_item.py
app/services/: state.py  todo_list.json
models/: todo_item.py
src/: index.ts  index.tsx
src/controllers/: auth.tsx  chat.tsx
src/controllers/endpoint-functions/: auth.tsx
src/models/: index.ts  schema.ts  services.ts  types.ts
src/models/services/: chat.service.ts  session.service.ts  user.service.ts
src/views/: layout.tsx
src/views/components/auth/: auth-failure-toast.tsx  auth-form-field.tsx  auth-page-link.tsx  auth-toast.tsx  sign-in-form.tsx  sign-up-form.tsx
src/views/components/chat/: chat-box.tsx  chat-header.tsx  chat-history.tsx  chat-section.tsx  chat-sidebar.tsx
src/views/pages/: chat-page.tsx  sign-in-page.tsx  sign-up-page.tsx
templates/: auth_page.jinja  auth_toast.jinja  chat.jinja  chat_home.jinja  home.jinja  sign_in.jinja  sign_up.jinja  todo.jinja  ws_page.jinja  ws_page_html.jinja
webserver/: socket_server.py  test_server.py
webserver/webassets/: index.html  main.js  styles.css
